<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/courseBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentPaddingBottom="20dp"
        >
<!--        android:backgroundTint="@color/black"-->

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
<!--            android:id="@+id/courseBg"-->
<!--            android:background="@color/black"-->

<!--            android:paddingBottom="30dp"-->

            <ImageView
                android:id="@+id/courseImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:maxWidth="245dp"
                android:transitionName="courseImage"
                app:srcCompat="@drawable/java_2" />
<!--                tools:layout_editor_absoluteX="66dp"-->
<!--                tools:layout_editor_absoluteY="231dp" -->

            <TextView
                android:id="@+id/courseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_margin="10dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_start_date"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_margin="10dp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_level"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/courseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_margin="10dp">
                </TextView>

                <TextView
                    android:id="@+id/courseLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp">
                </TextView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>